objects/modigie__Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>modigie__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Error_Code__c</fullName>
        <label>Error Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Job_Id__c</fullName>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Service__c</fullName>
        <label>Modigie Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Get Modigie</fullName>
                </value>
                <value>
                    <fullName>Get LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Get Phone Insights</fullName>
                </value>
                <value>
                    <fullName>Verify Employer</fullName>
                </value>
                <value>
                    <fullName>Unresponsive Lead</fullName>
                </value>
                <value>
                    <fullName>Phone Insights Data Maintenance</fullName>
                </value>
                <value>
                    <fullName>Verify Employer Data Maintenance</fullName>
                </value>
                <value>
                    <fullName>Get LinkedIn Modigie Automation</fullName>
                </value>
                <value>
                    <fullName>Get Modigie Job Automation</fullName>
                </value>
                <value>
                    <fullName>Validate Employer Job Automation</fullName>
                </value>
                <value>
                    <fullName>Get LinkedIn Job Automation</fullName>
                </value>
                <value>
                    <fullName>Phone Insights Job Automation</fullName>
                </value>
                <value>
                    <fullName>Verify Employer Job Automation</fullName>
                </value>
                <value>
                    <fullName>Unresponsive Lead Verify Employer Job Automation</fullName>
                </value>
                <value>
                    <fullName>Unresponsive lead get modigie</fullName>
                </value>
                <value>
                    <fullName>Modigie Custom Automation Verify Employer</fullName>
                </value>
                <value>
                    <fullName>Modigie Custom Automation Get LinkedIn</fullName>
                </value>
                <value>
                    <fullName>New Lead / Contact Verify Employer Job Automation</fullName>
                </value>
                <value>
                    <fullName>Get LinkedIn Campaign Automation</fullName>
                </value>
                <value>
                    <fullName>Modigie Custom Automation Get Modigie</fullName>
                </value>
                <value>
                    <fullName>Opportunity Contact Enrichment Get Modigie Automation</fullName>
                </value>
                <value>
                    <fullName>Custom Opportunity Contact Enrichment Get Modigie Automation</fullName>
                </value>
                <value>
                    <fullName>Get Modigie Campaign Automation</fullName>
                </value>
                <value>
                    <fullName>Get Phone Insights Job Automation</fullName>
                </value>
                <value>
                    <fullName>Get Phone Insights Campaign Job Automation</fullName>
                </value>
                <value>
                    <fullName>Modigie Custom Get Phone Insights Job Automation</fullName>
                </value>
                <value>
                    <fullName>Get Modigie Lead Campaign Automation</fullName>
                </value>
                <value>
                    <fullName>Verify Employer Campaign Automation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>modigie__Validation_Key__c</fullName>
        <label>Validation Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>modigie__All</fullName>
        <columns>NAME</columns>
        <columns>modigie__Error_Code__c</columns>
        <columns>modigie__Modigie_Service__c</columns>
        <columns>modigie__Job_Id__c</columns>
        <columns>modigie__Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>11/30/2020 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EL - {00000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <recordTypes>
        <fullName>modigie__Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>